--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -531,7 +531,7 @@ a:hover {
 }
 #site-title {
 	margin-right: 270px;
-	padding: 3.65625em 0 0;
+	padding: 0.2em 0 0;
 }
 #site-title a {
 	color: #111;
@@ -548,11 +548,11 @@ a:hover {
 #site-description {
 	color: #7a7a7a;
 	font-size: 14px;
-	margin: 0 270px 3.65625em 0;
+	margin: 0 270px 1em 0;
 }
 #branding img {
 	height: auto;
-	display: block;
+	margin-bottom: -7px;
 	width: 100%;
 }
 
@@ -2530,7 +2530,8 @@ p.comment-form-comment {
 	}
 	/* Reposition the site title and description slightly */
 	#site-title {
-		padding: 5.30625em 0 0;
+		/*padding: 5.30625em 0 0;*/
+		padding: 1em 0 0;
 	}
 	#site-title,
 	#site-description {
