--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -13,6 +13,75 @@ Text Domain: twentyeleven
 
 /* =Reset default browser CSS. Based on work by Eric Meyer.
 -------------------------------------------------------------- */
+/* accordion
+----------------------------------------------- */
+ac-container{
+    width: auto;
+    margin: 30px auto;
+}
+.ac-container label{
+    width: 300px;
+    text-align: center;
+    background: #ff9b9b;
+    margin: auto;
+    padding: 10px 5px;
+    position: relative;
+    display: block;
+    height: 40px;
+    cursor: pointer;
+    color: #fff;
+}
+.ac-container label:hover{
+    background: rgba( 255, 155, 155, 0.55 );
+    -webkit-transition: all .3s;
+    transition: all .3s;
+}
+.ac-container label:after{
+ color: #fff;
+    font-family:"FontAwesome";
+    content:"\f067";
+}
+.ac-container input:checked ~ label::after {
+ color: #fff;
+   font-family:"FontAwesome";
+   content:"\f068";
+}
+.ac-container input{
+   display: none;
+}
+.ac-container div{
+   background: rgba(255, 255, 255, 0.5);
+   margin-top: -1px;
+   overflow: hidden;
+   height: 0px;
+   position: relative;
+   z-index: 10;
+   transition:
+   height 0.3s ease-in-out,
+   box-shadow 0.6s linear;
+}
+.ac-container input:checked ~ div{
+   transition:
+   height 0.5s ease-in-out,
+   box-shadow 0.1s linear;
+   box-shadow: 0px 0px 0px 1px rgba(155,155,155,0.3);
+}
+.ac-container div p{
+   color: #777;
+   line-height: 23px;
+   font-size: 14px;
+   padding: 20px;
+}
+/* 高さの定義 */
+.ac-container input:checked ~ div.ac-small{
+   height: 150px;
+}
+.ac-container input:checked ~ div.ac-medium{
+   height: 200px;
+}
+.ac-container input:checked ~ div.ac-large{
+   height: 300px;
+}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -519,6 +588,75 @@ a:hover {
 	width: auto;
 }
 
+/* accordion
+----------------------------------------------- */
+ac-container{
+    width: auto;
+    margin: 30px auto;
+}
+.ac-container label{
+    width: 300px;
+    text-align: center;
+    background: #ff9b9b;
+    margin: auto;
+    padding: 10px 5px;
+    position: relative;
+    display: block;
+    height: 40px;
+    cursor: pointer;
+    color: #fff;
+}
+.ac-container label:hover{
+    background: rgba( 255, 155, 155, 0.55 );
+    -webkit-transition: all .3s;
+    transition: all .3s;
+}
+.ac-container label:after{
+ color: #fff;
+    font-family:"FontAwesome";
+    content:"\f067";
+}
+.ac-container input:checked ~ label::after {
+ color: #fff;
+   font-family:"FontAwesome";
+   content:"\f068";
+}
+.ac-container input{
+   display: none;
+}
+.ac-container div{
+   background: rgba(255, 255, 255, 0.5);
+   margin-top: -1px;
+   overflow: hidden;
+   height: 0px;
+   position: relative;
+   z-index: 10;
+   transition:
+   height 0.3s ease-in-out,
+   box-shadow 0.6s linear;
+}
+.ac-container input:checked ~ div{
+   transition:
+   height 0.5s ease-in-out,
+   box-shadow 0.1s linear;
+   box-shadow: 0px 0px 0px 1px rgba(155,155,155,0.3);
+}
+.ac-container div p{
+   color: #777;
+   line-height: 23px;
+   font-size: 14px;
+   padding: 20px;
+}
+/* 高さの定義 */
+.ac-container input:checked ~ div.ac-small{
+   height: 150px;
+}
+.ac-container input:checked ~ div.ac-medium{
+   height: 200px;
+}
+.ac-container input:checked ~ div.ac-large{
+   height: 300px;
+}
 
 /* =Header
 ----------------------------------------------- */
