remove comment navigation

--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -71,6 +71,7 @@ ac-container{
    line-height: 23px;
    font-size: 14px;
    padding: 20px;
+   text-align:center;
 }
 /* 高さの定義 */
 .ac-container input:checked ~ div.ac-small{
