--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -13,6 +13,30 @@ Text Domain: twentyeleven
 
 /* =Reset default browser CSS. Based on work by Eric Meyer.
 -------------------------------------------------------------- */
+
+
+
+/* download-button
+----------------------------------------------- */
+.link_box{
+    text-align: center;
+    position:relative;
+    width:80%;
+    padding:5%;
+    border:solid 1px #CCC;
+    margin:0px auto 20px;
+}
+
+.link_box a{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-indent:-999px;
+}
+
+
 /* accordion
 ----------------------------------------------- */
 ac-container{
@@ -154,7 +178,8 @@ body {
 }
 #primary {
 	float: left;
-	margin: 0 -26.4% 0 0;
+	margin: 0;
+  padding: 0;
 	width: 100%;
 }
 #content {
