--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -36,6 +36,24 @@ Text Domain: twentyeleven
     text-indent:-999px;
 }
 
+.link_box_af{
+  text-align: center;
+  position:relative;
+  width:100%;
+  padding:0;
+  border:solid 1px #CCC;
+  margin:20px auto 20px;
+}
+
+.link_box_af a{
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    text-indent:-999px;
+}
+
 
 /* accordion
 ----------------------------------------------- */
