--- a/wp-content/themes/twentyeleven/style.css
+++ b/wp-content/themes/twentyeleven/style.css
@@ -37,7 +37,7 @@ Text Domain: twentyeleven
 }
 
 .link_box_af{
-  text-align: center;
+  text-align: left;
   position:relative;
   width:100%;
   padding:0;
